Fix scrollbars
The fix for legacy apps did break it for new apps sometimes. :-/

--- a/src/App/shared.scss
+++ b/src/App/shared.scss
@@ -19,7 +19,9 @@ $roboto-font-path: "~roboto-fontface/fonts" !default;
 html, body, #webapp {
     height: 100%;
 
-    @include scrollbars($white);
+    .core19-app {
+        @include scrollbars($white);
+    }
 }
 
 body {
@@ -39,16 +41,4 @@ body {
 }
 :focus:active {
     outline-style: none;
-}
-
-.core19-app {
-    ::-webkit-scrollbar, ::-webkit-scrollbar-corner {
-        width: 1em;
-        height: 1em;
-    }
-
-    ::-webkit-scrollbar-thumb {
-        border-radius: 1em;
-        border: 0.39em solid;
-    }
 }
